codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__footer_collapse_queue_message_without_context.snap
---
source: tui/src/bottom_pane/chat_composer.rs
assertion_line: 5345
expression: terminal.backend()
---
"───────────────────────────────────────┐"
"› Test                                 │"
"                                       │"
"                                       │"
"                                       │"
"                                       │"
"                                       │"
"───────────────────────────────────────┘"
"  enter to queue message                "
