codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__footer_mode_ctrl_c_then_esc_hint.snap
---
source: tui/src/bottom_pane/chat_composer.rs
assertion_line: 5345
expression: terminal.backend()
---
"───────────────────────────────────────────────────────────────────────────────────────────────────┐"
"› Ask Elpis to do anything                                                                         │"
"                                                                                                   │"
"                                                                                                   │"
"                                                                                                   │"
"                                                                                                   │"
"                                                                                                   │"
"───────────────────────────────────────────────────────────────────────────────────────────────────┘"
"  esc esc to edit previous message                                                                  "
